--- a/rick-y-morty/src/features/character/components/styles/ListCharacter.module.css
+++ b/rick-y-morty/src/features/character/components/styles/ListCharacter.module.css
@@ -89,13 +89,13 @@
         width: 100%;
         height: 100%;
         max-height: 100%;
-        padding: 15px;
+        padding: 15px 8px 2px;
     }
 
     .cardsScroller {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(0, 1fr));
         /* Columnas escalables en móvil */
-        gap: 15px;
+        gap: 10px;
     }
 }
 
