--- a/rick-y-morty/src/features/favourites/styles/Favourites.module.css
+++ b/rick-y-morty/src/features/favourites/styles/Favourites.module.css
@@ -1,13 +1,24 @@
+.favouritesContainer {
+    position: relative;
+    width: 170px;
+    height: 30px;
+}
+
 .buttonFav {
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-    padding: 5px 5rem;
+    width: 100%;
+    height: 100%;
+    padding: 5px 0;
     cursor: pointer;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: #5B5454;
+    border: none;
+    position: relative;
+    z-index: 2;
 }
 
 .buttonFav:hover {
